--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Hibernate Search With Spring Boot</title>
 
-    <link href="/index.css" rel="stylesheet">
+    <link href="/templates/index.css" rel="stylesheet">
 </head>
 <body>
 
